# HW_ruff

./: README.md  app.py  countsapi.py  generatepayload.py  log.txt  outputslack.py  pyproject.toml  wsgi.py
